if(ALIROOT)
  add_subdirectory (hough)
endif(ALIROOT)
add_subdirectory (aliceHLTwrapper)
add_subdirectory (O2Device)
add_subdirectory (O2MessageMonitor)
add_subdirectory (DataFlow)
add_subdirectory (Publishers)
add_subdirectory (DataCompression)
# add_subdirectory (MCStepLogger)
add_subdirectory (PCG)
